--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.30)
-project(timepp)
+project(tpp-test)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(timepp_test TimeppTest.cpp)
+add_executable(tpp_test tpp-test.cpp)
